# chess_engine

cplchess/: .gitignore  Board.cpp  CMakeLists.txt  Engine.cpp  EngineFactory.cpp  Fen.cpp  MagicBitboard.cpp  Move.cpp  Move.hpp  PrincipalVariation.cpp  PrincipalVariation.hpp  Search.cpp  Square.cpp  Uci.hpp
cplchess/Tests/: MoveTests.cpp  puzzlerating.py
cplusplus-project-assignment/: .gitlab-ci.yml  Board.cpp  Board.hpp  Engine.hpp  EngineFactory.hpp  MagicBitboard.hpp  Main.cpp  Node.cpp  Node.hpp  Piece.cpp  Piece.hpp  README.md  Search.cpp  Search.hpp  Square.hpp  Uci.cpp
cplusplus-project-assignment/Tests/: BoardTests.cpp  puzzledb.py  puzzlerunner.py
cplusplus-project-assignment/Tests/Puzzles/: crushing_enPassant.csv  crushing_simple.csv
